<package>
  <name>cam_exploration</name>
  <version>0.1.1</version>
  <description>
    Exploration node for the AdvanRobot200.
  </description>
  <maintainer email="jordi.solerbusquets@gmail.com">Jordi Soler</maintainer>
  <license>BSD</license>

  <author email="jordi.solerbusquets@gmail.com">Jordi Soler</author>
  <author email="jordi.solerbusquets@gmail.com">Jordi Soler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  
  <!--run_depend>rgbd_launch</run_depend>
  <run_depend>depth_image_proc</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni2_camera</run_depend>
  <run_depend>tf</run_depend-->

</package>
